--- a/spec.yaml
+++ b/spec.yaml
@@ -138,45 +138,71 @@ components:
                 registration_number_issued_by_the_accreditation_body:
                   type: string
                 aggregated_goods_categories_and_relevant_production_processes:
-                  type: array
-                  description: 관련된 집약 상품 카테고리 종류
-                  items:
-                    type: object
-                    properties:
-                      agc:
-                        $ref: '#/components/schemas/AGC'
-                      route1:
-                        $ref: '#/components/schemas/Route'
-                      route2:
-                        $ref: '#/components/schemas/Route'
-                      route3:
-                        $ref: '#/components/schemas/Route'
-                      route4:
-                        $ref: '#/components/schemas/Route'
-                      route5:
-                        $ref: '#/components/schemas/Route'
-                      route6:
-                        $ref: '#/components/schemas/Route'
-                    required:
-                      - agc
-                      - routes
+                  type: object
+                  properties:
+                    list_of_aggregated_goods_categories:
+                      type: array
+                      description: 관련된 집약 상품 카테고리 종류
+                      items:
+                        type: object
+                        properties:
+                          agc:
+                            $ref: '#/components/schemas/AGC'
+                          route1:
+                            $ref: '#/components/schemas/Route'
+                          route2:
+                            $ref: '#/components/schemas/Route'
+                          route3:
+                            $ref: '#/components/schemas/Route'
+                          route4:
+                            $ref: '#/components/schemas/Route'
+                          route5:
+                            $ref: '#/components/schemas/Route'
+                          route6:
+                            $ref: '#/components/schemas/Route'
+                        required:
+                          - agc
+                          - routes
+                    relevant_production_processes:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          production_process:
+                            $ref: '#/components/schemas/AGC'
+                          included_goods_categories_1:
+                            $ref: '#/components/schemas/AGC'
+                          included_goods_categories_2:
+                            $ref: '#/components/schemas/AGC'
+                          included_goods_categories_3:
+                            $ref: '#/components/schemas/AGC'
+                          included_goods_categories_4:
+                            $ref: '#/components/schemas/AGC'
+                          included_goods_categories_5:
+                            $ref: '#/components/schemas/AGC'
+                          included_goods_categories_6:
+                            $ref: '#/components/schemas/AGC'
+                          name:
+                            type: string
                 purchased_precursors:
-                  production_process:
-                    $ref: '#/components/schemas/AGC'
-                  country_code:
-                    $ref: '#/components/schemas/CountryCode'
-                  route1:
-                    type: string
-                  route2:
-                    type: string
-                  route3:
-                    type: string
-                  route4:
-                    type: string
-                  route5:
-                    type: string
-                  name:
-                    type: string
+                  type: object
+                  properties:
+                    production_process:
+                      $ref: '#/components/schemas/AGC'
+                    country_code:
+                      $ref: '#/components/schemas/CountryCode'
+                    route1:
+                      $ref: '#/components/schemas/Route'
+                    route2:
+                      $ref: '#/components/schemas/Route'
+                    route3:
+                      $ref: '#/components/schemas/Route'
+                    route4:
+                      $ref: '#/components/schemas/Route'
+                    route5:
+                      $ref: '#/components/schemas/Route'
+                    name:
+                      $ref: '#/components/schemas/Route'
         b:
           type: object
           properties:
@@ -303,11 +329,6 @@ components:
           description: 구입한 프리커서 목록
           items:
             $ref: '#/components/schemas/Precursor'
-        source-streams:
-          type: array
-          description: 소스 스트림 목록
-          items:
-            $ref: '#/components/schemas/Stream'
         ghg-balance:
           type: object
           description: 온실가스 균형 정보
