--- a/spec.yaml
+++ b/spec.yaml
@@ -470,7 +470,61 @@ components:
                       - ef
         e:
           type: object
-          properties: {}
+          properties:
+            consumed_in_production_processes:
+              type: array
+              items:
+                type: number
+            specific_embedded_emissions:
+              type: object
+              description: 특정내재배출량 정보
+              properties:
+                direct:
+                  type: object
+                  description: 특정직접내재배출량
+                  properties:
+                    value:
+                      type: number
+                      description: 내재배출량 값 (tCO2e/t)
+                    source:
+                      type: string
+                      description: 배출량 출처
+                      enum:
+                        - Measured
+                        - Default
+                  required:
+                    - value
+                    - source
+                indirect:
+                  type: object
+                  description: 특정간접내재배출량
+                  properties:
+                    value:
+                      type: number
+                      description: 내재배출량 값 (tCO2e/t)
+                    source:
+                      type: string
+                      description: 배출량 출처
+                      enum:
+                        - D.2.1
+                        - D.2.2
+                        - D.2.3
+                        - D.2.4
+                        - Mix
+                  required:
+                    - value
+                    - source
+                justification:
+                  type: string
+                  description: 기본수치를 적용한 이유
+                  enum:
+                    - Unreasonable costs for more accurate monitoring
+                    - Data gaps
+                    - Other
+              required:
+                - direct
+                - indirect
+                - justification
         f:
           type: object
           properties: {}
@@ -483,33 +537,6 @@ components:
         s3:
           type: object
           properties: {}
-    CBAM:
-      type: object
-      description: CBAM 계산
-      properties:
-        # installation:
-        # verifier:
-        # agcs:
-        processes:
-          type: array
-          description: 제조 공정 목록
-          items:
-            $ref: '#/components/schemas/Process'
-        precursors:
-          type: array
-          description: 구입한 프리커서 목록
-          items:
-            $ref: '#/components/schemas/Precursor'
-        # ghg-balance:
-      required:
-        - reporting-period
-        - installation
-        - verifier
-        - agcs
-        - processes
-        - precursors
-        - source-streams
-        - ghg-balance
     AGC:
       type: string
       description: 집약 상품 카테고리
@@ -537,85 +564,7 @@ components:
       description: 생산 경로
       enum:
         - Basic oxygen steelmaking
-    # Process:
-    Precursor:
-      type: object
-      description: 프리커서
-      properties:
-        id:
-          type: string
-          format: uuid
-          description: 식별자
-        name:
-          type: string
-          description: 프리커서 명칭
-        country:
-          $ref: '#/components/schemas/CountryCode'
-        routes:
-          type: array
-          items:
-            $ref: '#/components/schemas/Route'
-        consumed:
-          type: object
-          additionalProperties:
-            type: number
-        see:
-          type: object
-          description: 특정내재배출량 정보
-          properties:
-            direct:
-              type: object
-              description: 특정직접내재배출량
-              properties:
-                value:
-                  type: number
-                  description: 내재배출량 값 (tCO2e/t)
-                source:
-                  type: string
-                  description: 배출량 출처
-                  enum:
-                    - Measured
-                    - Default
-              required:
-                - value
-                - source
-            indirect:
-              type: object
-              description: 특정간접내재배출량
-              properties:
-                value:
-                  type: number
-                  description: 내재배출량 값 (tCO2e/t)
-                source:
-                  type: string
-                  description: 배출량 출처
-                  enum:
-                    - D.2.1
-                    - D.2.2
-                    - D.2.3
-                    - D.2.4
-                    - Mix
-              required:
-                - value
-                - source
-            justification:
-              type: string
-              description: 기본수치를 적용한 이유
-              enum:
-                - Unreasonable costs for more accurate monitoring
-                - Data gaps
-                - Other
-          required:
-            - direct
-            - indirect
-            - justification
-      required:
-        - id
-        - name
-        - country
-        - routes
-        - consumed
-        - see
+    # Precursor:
     Stream:
       type: object
       properties:
