--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
+		"build:api-doc": "redocly build-docs ./spec.yaml",
 		"test": "jest"
 	},
 	"dependencies": {
